--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue22452.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue22452.xaml
@@ -2,7 +2,8 @@
 <Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Maui.Controls.Sample.Issues.Issue22452"
-    xmlns:ns="clr-namespace:Maui.Controls.Sample.Issues">
+    xmlns:ns="clr-namespace:Maui.Controls.Sample.Issues"
+    Shell.FlyoutBehavior="Locked">
 
   <FlyoutItem Title="Tab1"
               AutomationId="FlyoutItem1">
