--- a/src/Controls/tests/TestCases.HostApp/Platforms/Windows/App.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Platforms/Windows/App.xaml
@@ -13,6 +13,41 @@
       <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Default">
           <FontFamily x:Key="ContentControlThemeFontFamily">Segoe UI</FontFamily>
+          <FontFamily x:Key="PivotHeaderItemFontFamily">Segoe UI</FontFamily>
+          <FontFamily x:Key="PivotTitleFontFamily">Segoe UI</FontFamily>
+          <FontFamily x:Key="KeyTipFontFamily">Segoe UI</FontFamily>
+
+          <Style x:Key="BaseTextBlockStyle"
+                 TargetType="TextBlock">
+            <Setter Property="FontFamily"
+                    Value="Segoe UI" />
+            <Setter Property="FontWeight"
+                    Value="SemiBold" />
+            <Setter Property="FontSize"
+                    Value="14" />
+            <Setter Property="TextTrimming"
+                    Value="None" />
+            <Setter Property="TextWrapping"
+                    Value="Wrap" />
+            <Setter Property="LineStackingStrategy"
+                    Value="MaxHeight" />
+            <Setter Property="TextLineBounds"
+                    Value="Full" />
+          </Style>
+
+          <Style x:Key="NavigationViewTitleHeaderContentControlTextStyle"
+                 TargetType="ContentControl">
+            <Setter Property="FontWeight"
+                    Value="SemiBold" />
+            <Setter Property="FontSize"
+                    Value="28" />
+            <Setter Property="FontFamily"
+                    Value="Segoe UI" />
+            <Setter Property="Margin"
+                    Value="{ThemeResource NavigationViewHeaderMargin}" />
+            <Setter Property="VerticalAlignment"
+                    Value="Stretch" />
+          </Style>
         </ResourceDictionary>
       </ResourceDictionary.ThemeDictionaries>
     </ResourceDictionary>
