--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue23333.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue23333.xaml
@@ -4,7 +4,7 @@
              x:Class="Maui.Controls.Sample.Issues.Issue23333">
 
   <VerticalStackLayout>
-    <Frame AutomationId="FrameWithoutBorder"
+    <Frame AutomationId="Frame"
            CornerRadius="100"
            Margin="10"
            VerticalOptions="Start"
