fix-15196-Modified and removed the changes in test case and sample.

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue15196.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue15196.xaml
@@ -7,7 +7,7 @@
     <Frame x:Name="frame" HeightRequest="200">
       <Entry x:Name="entry" Text="This is entry inside the frame"/>
     </Frame>
-    <Button Text="Remove the frame" AutomationId="RemoveButton" Clicked="Button_Clicked"/>
+    <Button Text="Remove the frame" AutomationId="RemoveButton" Clicked="OnButtonClicked"/>
   </StackLayout>
 
 </ContentPage>
