--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue8244.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue8244.xaml
@@ -2,55 +2,41 @@
 <Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue8244"
+            xmlns:local="clr-namespace:Maui.Controls.Sample.Issues"
             Shell.FlyoutBehavior="Disabled">
-  <TabBar>
+  
+  <TabBar AutomationId="TabBarIcon">
     <Tab Route="main" Title="Home">
       <Tab.Icon>
-        <FontImageSource
-       Size="20"
-       FontFamily = "Ionicons" 
-       Glyph = "&#xf30c;"/>
+        <FontImageSource Size="20" FontFamily ="FA" Glyph="{x:Static local:IconFont.Laptop}"/>
       </Tab.Icon>
       <ShellContent ContentTemplate="{DataTemplate local:MainTabPage}" />
     </Tab>
 
     <Tab Route="plans" Title="Meal Plans">
       <Tab.Icon>
-        <FontImageSource
-       Size="20"
-       FontFamily = "Ionicons" 
-       Glyph = "&#xf30c;"/>
+        <FontImageSource Size="20" FontFamily = "FA" Glyph="{x:Static local:IconFont.LaptopMedical}"/>
       </Tab.Icon>
       <ShellContent ContentTemplate="{DataTemplate local:SecondTabPage}" />
     </Tab>
 
     <Tab Route="create">
       <Tab.Icon>
-        <FontImageSource
-       FontAutoScalingEnabled="False"
-       Size="20"
-       FontFamily = "Ionicons" 
-       Glyph = "&#xf30c;"/>
+        <FontImageSource Size="20" FontFamily = "FA" Glyph="{x:Static local:IconFont.Plus}"/>
       </Tab.Icon>
       <ShellContent ContentTemplate="{DataTemplate local:SecondTabPage}" />
     </Tab>
 
     <Tab Route="library" Title="Library">
       <Tab.Icon>
-        <FontImageSource
-       Size="20"
-       FontFamily = "Ionicons" 
-       Glyph = "&#xf30c;"/>
+        <FontImageSource Size="20" FontFamily = "FA" Glyph="{x:Static local:IconFont.LaptopFile}"/>
       </Tab.Icon>
       <ShellContent ContentTemplate="{DataTemplate local:SecondTabPage}" />
     </Tab>
 
     <Tab Route="todo" Title="To Do">
       <Tab.Icon>
-        <FontImageSource
-       Size="20"
-       FontFamily = "Ionicons" 
-       Glyph = "&#xf30c;"/>
+        <FontImageSource Size="20" FontFamily = "FA" Glyph="{x:Static local:IconFont.LaptopCode}"/>
       </Tab.Icon>
       <ShellContent ContentTemplate="{DataTemplate local:SecondTabPage}" />
     </Tab>
