Images added for Android and iOS

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue8244.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue8244.xaml
@@ -5,7 +5,7 @@
             xmlns:local="clr-namespace:Maui.Controls.Sample.Issues"
             Shell.FlyoutBehavior="Disabled">
   
-  <TabBar AutomationId="TabBarIcon">
+  <TabBar>
     <Tab Route="main" Title="Home">
       <Tab.Icon>
         <FontImageSource Size="20" FontFamily ="FA" Glyph="{x:Static local:IconFont.Laptop}"/>
