--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue15524.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue15524.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             BackgroundColor="{AppThemeBinding Light=White,Dark=Black}"
              x:Class="Maui.Controls.Sample.Issues.Issue15524">
   <ContentPage.Resources>
     	<Color x:Key="Primary">#512BD4</Color>
