UI test modified

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue7453.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue7453.xaml
@@ -5,10 +5,16 @@
              FlyoutBehavior="Disabled"
              Title="Issue7453">
     <TabBar AutomationId="TabBar">
-        <Tab Title="Nested Tabs">
+        <Tab Title="Nested Tabs" AutomationId="tabbar">
             <ShellContent x:Name="tab" Title="Home">
                 <ContentPage>
-                    <Button Text="Hello" AutomationId="ChangeShellContentTitle" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="100" HeightRequest="40" Clicked="OnButtonClicked"/>
+                    <StackLayout HorizontalOptions="Center" Spacing="30">
+                        <HorizontalStackLayout>
+                            <Label Text="Current Shell Title : " FontAttributes="Bold"/>
+                            <Label Text="{Binding Source={x:Reference tab}, Path=Title}" AutomationId="LabelId" />
+                        </HorizontalStackLayout>
+                        <Button Text="Change Title" AutomationId="ChangeShellContentTitle" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="100" HeightRequest="40" Clicked="OnButtonClicked"/>
+                    </StackLayout>
                 </ContentPage>
             </ShellContent>
 
