test changes added & iOS Screenshot added

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue15524.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue15524.xaml
@@ -52,7 +52,7 @@
     <Label Text="Editor"/>
     <Editor Text="Editor" AutomationId="Editor"/>
     <Label Text="DatePicker"/>
-    <DatePicker AutomationId="DatePicker"/>
+    <DatePicker Date="9/24/2024" AutomationId="DatePicker"/>
     <Label Text="TimePicker"/>
     <TimePicker AutomationId="TimePicker"/>
     <Button Text="ChangeTheme" AutomationId="ChangeTheme" Clicked="OnButtonClicked"/>
