test case changes added

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue21368.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue21368.xaml
@@ -2,30 +2,27 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue21368">
-    
-    
+
+
     <HorizontalStackLayout Spacing="40" Padding="10">
         <VerticalStackLayout>
-            <Image Source="test.png" x:Name="image" Aspect="Center" HeightRequest="40"
-               HorizontalOptions="Center" VerticalOptions="Center"/>
+            <Image Source="dotnet_bot.png" x:Name="image" Aspect="Center" WidthRequest="50" HeightRequest="40"
+                    HorizontalOptions="Center" VerticalOptions="Center"/>
             <Label Text="Center" AutomationId="LabelNames"/>
         </VerticalStackLayout>
-
         <VerticalStackLayout>
-            <Image Source="test.png" Aspect="AspectFit" HeightRequest="40"
-       HorizontalOptions="Center" VerticalOptions="Center"/>
+            <Image Source="dotnet_bot.png" Aspect="AspectFit" HeightRequest="40" WidthRequest="50"
+                HorizontalOptions="Center" VerticalOptions="Center"/>
             <Label Text="AspectFit"/>
         </VerticalStackLayout>
-
         <VerticalStackLayout>
-            <Image Source="test.png" Aspect="AspectFill" HeightRequest="40"
-       HorizontalOptions="Center" VerticalOptions="Center"/>
+            <Image Source="dotnet_bot.png" Aspect="AspectFill" WidthRequest="50" HeightRequest="40"
+                HorizontalOptions="Center" VerticalOptions="Center"/>
             <Label Text="AspectFill"/>
         </VerticalStackLayout>
-
         <VerticalStackLayout>
-            <Image Source="test.png" Aspect="Fill" HeightRequest="40"
-       HorizontalOptions="Center" VerticalOptions="Center"/>
+            <Image Source="dotnet_bot.png" Aspect="Fill" HeightRequest="40" WidthRequest="50"
+                HorizontalOptions="Center"  VerticalOptions="Center"/>
             <Label Text="Fill" HorizontalTextAlignment="Center"/>
         </VerticalStackLayout>
     </HorizontalStackLayout>
